Date	Added
2009/1/5
	* Added @charcommands to return a list of available # commands [SketchyPhoenix]
2008/12/26
	* Rev. 13444 Marked new Morroc fields as nomemo. [L0ne_W0lf]
	* Rev. 13415 Commented out maps no longer accessable with 12.1. [L0ne_W0lf]
2008/12/17
	* Rev. 13405 Added additional maps to maps_athena.conf. [L0ne_W0lf]
2008/11/04
	* Updated: added info about latest packet_ver flag in client.conf (bugreport:2415) [akrus]
2008/10/06
	* Rev. 13264 Changed exp_calc_type to 1, as type 0 seems to be based off old rumour, and to compliment the update to mob_revive. [L0ne_W0lf]
2008/10/02
	* Rev. 13253 Modified homunculus auto-vapor setting to yes. (bugreport:2298) [L0ne_W0lf]
2008/09/11
	* Rev. 13204 Updated some messages in msg_athena.conf. [L0ne_W0lf]
2008/08/19
	* Added global sql settings 'sql.*' to inter_athena.conf.
	* Commented 'ipban.sql.*' and 'account.sql.*' so they default to the global settings.
	* Removed deprecated settings 'case_sensitive' and 'add_to_unlimited_account' from in login_athena.conf.
	* Made inter_athena.conf be imported from login_athena.conf. [FlavioJS]
2008/08/13
	* Added config settings mapreg_txt and mapreg_db to inter config [ultramage]
2008/08/10
	* Removed duplicate gef_cas mapflags [Yommy]
2008/08/01
	* Rev. 13033 Mapflag updates. Will need to do a complete rewrite eventually. [L0ne_W0lf]
	- Removed several noicewall limitations from interior maps mostly.
	- Removed several noreturn limitations from interior maps mostly.
	- Removed nobranch limitations from PVP (yoyo and nightmare) maps.
	- Removed nopenalty flag from nightmare PVP maps.
	- Commented out all noloot and noexp mapflag entries.
	- Added a few more noskill entries for some maps.
2008/07/27
	* Removed the unused login and txt->sql options in inter_athena.conf
	* Renamed config option log_db to log_db_db in inter_athena.conf
	* Conf file adjustments for the loginmerge branch
	- added new login and ipban db config options to login_athena.conf